--- a/config/webhook.conf
+++ b/config/webhook.conf
@@ -1,6 +1,7 @@
 # Example webhook.conf
 # This is a comment
-# Use one line per application, no inline comments
+# One line per application, no inline comments
 
 # Slack=https://hooks.slack.com/services/XXX/YYY/ZZZ
-# Teams=https://your-teams-webhook-url
+# TeamsA=https://your-teams-webhook-url
+# TeamsB=https://your-teams-webhook-url
